create crud for user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/alten
 spring.datasource.username=postgres
 spring.datasource.password=root
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.show-sql=true
 
